chore(update swagger):update the swagger docs
