# server/swagger.json
@@ -5,8 +5,10 @@
         "version": "1.0.0",
         "title": "WayFarer API"
     },
+    "host": "virtserver.swaggerhub.com",
     "basePath": "/danielotienoke/WayFarerAPI/1.0.0",
-    "tags": [{
+    "tags": [
+        {
             "name": "Trip",
             "description": "Everything about your Trips"
         },
@@ -19,24 +21,35 @@
             "description": "Everything about your User Authentication"
         }
     ],
-    "schemes": ["https", "http"],
+    "schemes": [
+        "https",
+        "http"
+    ],
     "paths": {
         "/api/v1/trips": {
             "post": {
-                "tags": ["Trip"],
+                "tags": [
+                    "Trip"
+                ],
                 "summary": "Add a new trip.",
                 "operationId": "addTrip",
-                "consumes": ["application/json"],
-                "produces": ["application/json"],
-                "parameters": [{
-                    "in": "body",
-                    "name": "body",
-                    "description": "Create a new trip object",
-                    "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/Trip"
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Create a new trip object",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Trip"
+                        }
                     }
-                }],
+                ],
                 "responses": {
                     "405": {
                         "description": "Invalid input"
@@ -46,19 +59,27 @@
         },
         "/api/v1/trips/{tripId}/cancel": {
             "patch": {
-                "tags": ["Trip"],
+                "tags": [
+                    "Trip"
+                ],
                 "summary": "Update an existing trip",
                 "operationId": "patchTrip",
-                "consumes": ["application/json"],
-                "produces": ["application/json"],
-                "parameters": [{
-                    "name": "tripId",
-                    "in": "path",
-                    "description": "ID of trip to return",
-                    "required": true,
-                    "type": "string",
-                    "format": "uuid"
-                }],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "tripId",
+                        "in": "path",
+                        "description": "ID of trip to return",
+                        "required": true,
+                        "type": "string",
+                        "format": "uuid"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "successful operation",
@@ -77,19 +98,25 @@
         },
         "/api/v1/trips/{tripId}": {
             "get": {
-                "tags": ["Trip"],
+                "tags": [
+                    "Trip"
+                ],
                 "summary": "Get a specific trip by ID",
                 "description": "Returns a single trip",
                 "operationId": "getTripById",
-                "produces": ["application/json"],
-                "parameters": [{
-                    "name": "tripId",
-                    "in": "path",
-                    "description": "ID of trip to return",
-                    "required": true,
-                    "type": "string",
-                    "format": "uuid"
-                }],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "tripId",
+                        "in": "path",
+                        "description": "ID of trip to return",
+                        "required": true,
+                        "type": "string",
+                        "format": "uuid"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "successful operation",
@@ -108,10 +135,14 @@
         },
         "/api/v1/trips/": {
             "get": {
-                "tags": ["Trip"],
+                "tags": [
+                    "Trip"
+                ],
                 "summary": "Returns all trips",
                 "operationId": "getAllTrips",
-                "produces": ["application/json"],
+                "produces": [
+                    "application/json"
+                ],
                 "parameters": [],
                 "responses": {
                     "200": {
@@ -123,22 +154,116 @@
                 }
             }
         },
+        "/api/v1/bookings": {
+            "post": {
+                "tags": [
+                    "Booking"
+                ],
+                "summary": "Add a booking.",
+                "operationId": "addBooking",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Create a new booking object",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Booking"
+                        }
+                    }
+                ],
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+        "/api/v1/bookings/": {
+            "get": {
+                "tags": [
+                    "Booking"
+                ],
+                "summary": "Returns all bookings",
+                "operationId": "getAllBookings",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/bookings/{bookingId}": {
+            "delete": {
+                "tags": [
+                    "Booking"
+                ],
+                "summary": "Delete a specific booking by ID",
+                "operationId": "deleteBookingById",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "bookingId",
+                        "in": "path",
+                        "description": "ID of the booking to be deleted",
+                        "required": true,
+                        "type": "string",
+                        "format": "uuid"
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/Booking"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Booking not found"
+                    }
+                }
+            }
+        },
         "/api/v1/auth/signup/admin": {
             "post": {
-                "tags": ["User"],
+                "tags": [
+                    "User"
+                ],
                 "summary": "Create Admin",
                 "description": "This can only be done by the admin.",
                 "operationId": "createAdmin",
-                "produces": ["application/json"],
-                "parameters": [{
-                    "in": "body",
-                    "name": "body",
-                    "description": "Created Admin object",
-                    "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/User"
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Created Admin object",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
                     }
-                }],
+                ],
                 "responses": {
                     "default": {
                         "description": "successful operation"
@@ -148,20 +273,26 @@
         },
         "/api/v1/auth/signup": {
             "post": {
-                "tags": ["User"],
+                "tags": [
+                    "User"
+                ],
                 "summary": "Create a user",
                 "description": "This can only be done by the logged in user.",
                 "operationId": "createUser",
-                "produces": ["application/json"],
-                "parameters": [{
-                    "in": "body",
-                    "name": "body",
-                    "description": "Created user object",
-                    "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/User"
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Created user object",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
                     }
-                }],
+                ],
                 "responses": {
                     "default": {
                         "description": "successful operation"
@@ -171,11 +302,16 @@
         },
         "/api/v1/auth/login": {
             "post": {
-                "tags": ["User"],
+                "tags": [
+                    "User"
+                ],
                 "summary": "Logs user into the system",
                 "operationId": "loginUser",
-                "produces": ["application/json"],
-                "parameters": [{
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
                         "name": "email",
                         "in": "query",
                         "description": "The user email for login",
@@ -231,7 +367,13 @@
     "definitions": {
         "User": {
             "type": "object",
-            "required": ["dateCreated", "email", "firstName", "lastName", "password"],
+            "required": [
+                "dateCreated",
+                "email",
+                "firstName",
+                "lastName",
+                "password"
+            ],
             "properties": {
                 "id": {
                     "type": "string",
@@ -301,12 +443,44 @@
                 "status": {
                     "type": "string",
                     "description": "Status of the trip",
-                    "enum": ["available", "cancelled"]
+                    "enum": [
+                        "available",
+                        "cancelled"
+                    ]
                 },
                 "tripDate": {
                     "type": "string",
                     "format": "date"
                 }
+            }
+        },
+        "Booking": {
+            "type": "object",
+            "required": [
+                "numberOfSeats",
+                "tripId"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "tripId": {
+                    "type": "string",
+                    "format": "uuid",
+                    "example": "a165520d-6672-4e9c-ba41-ee206908263e"
+                },
+                "numberOfSeats": {
+                    "type": "number",
+                    "example": 5.0
+                },
+                "dateCreated": {
+                    "type": "string",
+                    "format": "date"
+                }
+            },
+            "xml": {
+                "name": "User"
             }
         }
     }
